@@ -1,0 +1,8 @@
+<TextStylePolicy scope="text/plain">
+	<FileWidth>120</FileWidth>
+	<TabWidth>4</TabWidth>
+	<TabsToSpaces>False</TabsToSpaces>
+	<NoTabsAfterNonTabs>False</NoTabsAfterNonTabs>
+	<RemoveTrailingWhitespace>False</RemoveTrailingWhitespace>
+	<EolMarker>Unix</EolMarker>
+</TextStylePolicy>
